--- a/.drone.yml
+++ b/.drone.yml
@@ -60,7 +60,8 @@ steps:
     - docker buildx create --use --name mybuilder
     - docker buildx build --platform linux/amd64 -t adamkoro/docker-volume-backup:${DRONE_COMMIT_SHA:0:7} -t adamkoro/docker-volume-backup:latest -t adamkoro/docker-volume-backup:${DRONE_TAG} . --push -f Dockerfile
     when:
-      branch: 
+      branch:
+        include:
         - "main"
 
 trigger:
