ci: revert tags

--- a/.drone.yml
+++ b/.drone.yml
@@ -58,7 +58,7 @@ steps:
     commands:
     - "docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD"
     - "docker buildx create --use --name mybuilder"
-    - "docker buildx build --platform linux/amd64 -t docker.io/adamkoro/docker-volume-backup:${DRONE_COMMIT_SHA:0:7} -t docker.io/adamkoro/docker-volume-backup:latest -t docker.io/adamkoro/docker-volume-backup:${DRONE_TAG} . --push -f Dockerfile"
+    - "docker buildx build --platform linux/amd64 -t adamkoro/docker-volume-backup:${DRONE_COMMIT_SHA:0:7} -t adamkoro/docker-volume-backup:latest . --push -f Dockerfile"
     when:
       branch:
         include:
