--- a/.drone.yml
+++ b/.drone.yml
@@ -58,26 +58,7 @@ steps:
     commands:
     - "docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD"
     - "docker buildx create --use --name mybuilder"
-    - "docker buildx build --platform linux/amd64 -t adamkoro/docker-volume-backup:${DRONE_COMMIT_SHA:0:7} -t adamkoro/docker-volume-backup:latest . --push -f Dockerfile"
-    when:
-      branch:
-        include:
-        - "main"
-
-  - name: build prod tag image
-    image: docker:dind
-    environment:
-      REGISTRY_USER:
-        from_secret: docker_user
-      REGISTRY_PASSWORD:
-        from_secret: docker_pass
-    volumes:
-      - name: dockersock
-        path: /var/run/
-    commands:
-    - "docker login -u $REGISTRY_USER -p $REGISTRY_PASSWORD"
-    - "docker buildx create --use --name mybuilder"
-    - "docker buildx build --platform linux/amd64 -t adamkoro/docker-volume-backup:${DRONE_TAG} . --push -f Dockerfile"
+    - "docker buildx build --platform linux/amd64 -t adamkoro/docker-volume-backup:${DRONE_COMMIT_SHA:0:7} -t adamkoro/docker-volume-backup:latest -t adamkoro/docker-volume-backup:${DRONE_TAG} . --push -f Dockerfile"
     when:
       branch:
         include:
