--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -21,7 +21,6 @@
 	"customizations": {
 		"vscode": {
 		  "extensions": [
-			"redhat.ansible",
 			"asciidoctor.asciidoctor-vscode",
 			"truman.autocomplate-shell",
 			"shakram02.bash-beautify",
@@ -34,7 +33,9 @@
 			"oderwat.indent-rainbow",
 			"DavidAnson.vscode-markdownlint",
 			"esbenp.prettier-vscode",
-			"redhat.vscode-yaml"
+			"redhat.vscode-yaml",
+			"rogalmic.bash-debug",
+			"timonwong.shellcheck"
 		]
 		}
 	  }
